# derivative-calc

./: README.md  derivative-calc.cabal
app/: Main.hs
src/: Diff.hs  Eval.hs  Expr.hs  Parser.hs  Pretty.hs  Repl.hs  Simplify.hs
test/: Spec.hs
uml/: architecture.puml  repl_sequence.puml
