cabal-version: 3.8
name: derivative-calc
version: 0.1.0.0
build-type: Simple

executable derivative-calc
    main-is: Main.hs
    hs-source-dirs: app, src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Werror
    other-modules:
        Diff,
        Eval,
        Expr,
        Parser,
        Pretty,
        Repl,
        Simplify
    build-depends:
        base >= 4.15 && < 5

test-suite derivative-calc-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test, src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Werror
    other-modules:
        Diff,
        Eval,
        Expr,
        Parser,
        Pretty,
        Repl,
        Simplify
    build-depends:
        base >= 4.15 && < 5
